# searXNG-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
searxng_mcp/: __init__.py  browser.py  config.py  scraper.py  search.py  utils.py
